fixed features-carousel on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 :root {
   --spacer: 1.5rem;
 
-  --clr-orange-500: #ff6500;
+  --clr-orange-500: #ff6600;
   --clr-black: #101010;
   --clr-gray: #e0e0e0;
   --clr-white: #fffffe;
@@ -20,8 +20,8 @@ background: 1
 
 */
 
-/* GENERAL */
-
+/* --- GENERAL ---- */
+/* #region */
 *,
 *::before,
 *::after {
@@ -56,8 +56,10 @@ a {
   color: inherit;
 }
 
-/* TEXT */
+/* #endregion */
 
+/* --- TEXT --- */
+/* #region */
 h1,
 h2,
 h3,
@@ -124,15 +126,17 @@ h6 {
     font-weight: 700;
   }
 }
+/* #endregion */
 
-/* UTILITY */
+/* --- UTILITY --- */
+/* #region */
 
 .flow-content > * + * {
   margin-top: var(--flow-space, calc(var(--spacer) * 1.25));
 }
 
-.flow-content--large {
-  --flow-space: 3rem;
+.flow-content--l {
+  --flow-space: 5rem;
 }
 
 .split {
@@ -157,11 +161,19 @@ h6 {
     flex-direction: row;
   }
   .split > * + * {
-    margin: 0 0 0 var(--spacer);
+    margin: 0 0 0 var(--split-space, var(--spacer));
+  }
+  .split--l {
+    --split-space: 3rem;
+  }
+  .flow-content > * + * {
+    margin-top: var(--flow-space, calc(var(--spacer) * 1.75));
   }
 }
+/* #endregion */
 
-/* BUTTONS */
+/* --- BUTTONS --- */
+/* #region */
 
 .btn {
   display: inline-block;
@@ -202,8 +214,10 @@ h6 {
     padding: 0.5em 2em;
   }
 }
+/* #endregion */
 
-/* SEPARATORS */
+/* --- SEPARATORS --- */
+/* #region */
 
 .vertical-line {
   margin: 0 2em;
@@ -216,8 +230,10 @@ h6 {
   border-top: 1px solid var(--clr-gray);
   width: 50px;
 }
+/* #endregion */
 
-/* HEADER */
+/* --- HEADER --- */
+/* #region */
 
 header {
   position: fixed;
@@ -261,8 +277,10 @@ header {
     display: inline-block;
   }
 }
+/* #endregion */
 
-/* HERO */
+/* --- HERO --- */
+/* #region */
 
 .hero {
   padding-top: 0;
@@ -295,8 +313,10 @@ header {
     display: none;
   }
 }
+/* #endregion */
 
-/* FEATURES */
+/* --- FEATURES --- */
+/* #region */
 
 #cellphone-1280-img {
   display: none;
@@ -306,31 +326,16 @@ header {
   padding-bottom: 0;
 }
 
-.features-cards {
-  padding: 1rem 0;
-  display: flex;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-}
-
-.features-cards::-webkit-scrollbar {
-  display: none;
-}
-
 .feature {
-  min-width: 270px;
-  max-width: 90%;
-  padding: 1.5em 2em 1.5em 1.5em;
+  padding: 1.5em 2em 0 1.5em;
   background: white;
   border-radius: 10px;
   box-shadow: var(--shadow-8dp);
-  scroll-snap-align: center;
+  min-height: 260px;
 }
 
-.feature + .feature {
-  margin-left: 2rem;
+.feature > * + * {
+  margin-top: 1rem;
 }
 
 #gestion-svg,
@@ -343,8 +348,11 @@ header {
 #tiempos-svg {
   width: 50px;
   height: 50px;
-  margin-bottom: 1rem;
   fill: var(--clr-orange-500);
+}
+
+#arrow-outline-svg {
+  display: none;
 }
 
 @media (min-width: 750px) {
@@ -356,15 +364,26 @@ header {
     margin-top: -100px;
   }
 
-  .features-content {
-    width: 50%;
+  .features-image {
+    flex-shrink: 0;
   }
-  #interfaz-indicator {
-    display: none;
-  }
-}
 
-/* BACKOFFICE */
+  #arrow-outline-svg {
+    width: 39px;
+    height: 39px;
+    display: block;
+    position: relative;
+    top: 9rem;
+    left: -2rem;
+  }
+  /* .feature {
+    min-width: 320px;
+  } */
+}
+/* #endregion */
+
+/* --- BACKOFFICE --- */
+/* #region */
 
 .backoffice > h2 {
   font-size: 1.25rem;
@@ -380,8 +399,10 @@ header {
     width: 80%;
   }
 }
+/* #endregion */
 
-/* TESTIMONIALS */
+/* --- TESTIMONIALS --- */
+/* #region */
 
 .testimonials {
   padding-bottom: 0;
@@ -426,19 +447,16 @@ header {
   margin-left: 1rem;
 }
 
-/* #testimonial-2,
-#testimonial-3 {
-  opacity: 0;
-} */
-
 .comillas-svg {
   width: 50px;
   height: 50px;
   margin-bottom: 1rem;
   fill: var(--clr-orange-500);
 }
+/* #endregion */
 
-/* FOOTER */
+/* --- FOOTER --- */
+/* #region */
 
 footer {
   position: relative;
@@ -457,7 +475,10 @@ footer > .text-body-2:hover {
   height: 32px;
 }
 
-/* INDICATOR */
+/* #endregion */
+
+/* --- INDICATOR --- */
+/* #region */
 
 .indicator {
   margin: 0 auto;
@@ -472,8 +493,10 @@ footer > .text-body-2:hover {
   border-radius: 100px;
   background: var(--clr-orange-500);
 }
+/* #endregion */
 
-/* MODAL */
+/* --- MODAL --- */
+/* #region */
 
 #modal-container {
   position: fixed;
@@ -508,15 +531,19 @@ footer > .text-body-2:hover {
   right: 1rem;
   color: var(--clr-orange-500);
 }
+/* #endregion */
 
-/* BACKGROUND */
+/* --- BACKGROUND --- */
+/* #region */
 
 .background {
   position: absolute;
   z-index: 1;
 }
+/* #endregion */
 
-/* WHATSAPP */
+/* --- WHATSAPP --- */
+/* #region */
 
 .whatsapp {
   position: fixed;
@@ -531,3 +558,4 @@ footer > .text-body-2:hover {
   width: 56px;
   height: 56px;
 }
+/* #endregion */
